Changed dog, testing pull request

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script defer src="./bundle.js"></script>
+    <script defer src="../src/app.js"></script>
   </head>
   <body>
-    <h1>What day is it? 😕</h1>
-    <h2>Today is <span id="day">?</span></h2>
+    <h1>What day is it? 🤷‍♂️</h1>
+    <h2>It is 🔥<span id="day">?</span><span id="mydudes"></span>🔥</h2>
 
-    <img src="pug.jpg" width="500" alt="pug" />
+    <img src="dober.jpg" width="500" alt="pug" />
   </body>
 </html>
