Intentionally failing this test

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script id='script' defer src="./bundle.js"></script>
-    <!-- <script id='script' defer src="../src/app.js"></script> -->
+    <!-- <script id='script' defer src="./bundle.js"></script> -->
+    <script id='script' defer src="../src/app.js"></script>
   </head>
   </head>
   <body>
