Decent start to main header

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script defer src="./bundle.js"></script>
-    <!-- <script defer src="../src/app.js"></script> -->
+    <!-- <script defer src="./bundle.js"></script> -->
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <script defer src="../src/app.js"></script>
   </head>
-  </head>
-  <body>
-    <h1>What day is it? 🤷‍♂️</h1>
-    <h2>It is 🔥<span id="day">?</span><span id="mydudes"></span>🔥</h2>
+  <body class="light">
+    <nav class="navbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">Home</li>
+        <li class="nav-item"></li>
+        <li class="nav-item">About</li>
+        <li class="nav-item">Projects</li>
+      </ul>
+    </nav>
 
-    <img id="picture" src="dober.jpg" width="500" alt="pug" />
+    <header class="header">
+      <div class="header-text-container">
+        <h1>Taylor Steele</h1>
+        <h2>Software Engineer</h2>
+      </div>
+      <img src="pug.jpg" alt="pug" width="150" />
+    </header>
+    <main>
+      <p>
+        I will write some great placeholder text – and nobody writes better placeholder text than
+        me, believe me – and I’ll write it very inexpensively. I will write some great, great text
+        on your website’s Southern border, and I will make Google pay for that text. Mark my words.
+        I think the only difference between me and the other placeholder text is that I’m more
+        honest and my words are more beautiful. I was going to say something extremely rough to
+        Lorem Ipsum, to its family, and I said to myself, "I can't do it. I just can't do it. It's
+        inappropriate. It's not nice."
+      </p>
+      <p>
+        Trump Ipsum is calling for a total and complete shutdown of Muslim text entering your
+        website. Despite the constant negative ipsum covfefe. When other websites give you text,
+        they’re not sending the best. They’re not sending you, they’re sending words that have lots
+        of problems and they’re bringing those problems with us. They’re bringing mistakes. They’re
+        bringing misspellings. They’re typists… And some, I assume, are good words.
+      </p>
+    </main>
   </body>
 </html>
