--- a/public/index.html
+++ b/public/index.html
@@ -30,22 +30,43 @@
       <img src="pug.jpg" alt="pug" width="150" />
     </header>
     <main>
-      <p>
-        I will write some great placeholder text – and nobody writes better placeholder text than
-        me, believe me – and I’ll write it very inexpensively. I will write some great, great text
-        on your website’s Southern border, and I will make Google pay for that text. Mark my words.
-        I think the only difference between me and the other placeholder text is that I’m more
-        honest and my words are more beautiful. I was going to say something extremely rough to
-        Lorem Ipsum, to its family, and I said to myself, "I can't do it. I just can't do it. It's
-        inappropriate. It's not nice."
-      </p>
-      <p>
-        Trump Ipsum is calling for a total and complete shutdown of Muslim text entering your
-        website. Despite the constant negative ipsum covfefe. When other websites give you text,
-        they’re not sending the best. They’re not sending you, they’re sending words that have lots
-        of problems and they’re bringing those problems with us. They’re bringing mistakes. They’re
-        bringing misspellings. They’re typists… And some, I assume, are good words.
-      </p>
+      <div class="about-container">
+        <ul>
+          <li>
+            <img src="dober.jpg" alt="dober" />
+            <p>
+              I will write some great placeholder text – and nobody writes better placeholder text
+              than me, believe me – and I’ll write it very inexpensively.
+            </p>
+          </li>
+          <li>
+            <img src="dober.jpg" alt="dober" />
+            <p>
+              I think the only difference between me and the other placeholder text is that I’m more
+              honest and my words are more beautiful.
+            </p>
+          </li>
+          <li>
+            <img src="dober.jpg" alt="dober" />
+            <p>
+              Trump Ipsum is calling for a total and complete shutdown of Muslim text entering your
+              website. Despite the constant negative ipsum covfefe.
+            </p>
+          </li>
+        </ul>
+      </div>
     </main>
+
+    <footer>
+      <div class="footer-container">
+        <div class="container">
+          <p>Made with 🌮</p>
+          <ul class="footer-links">
+            <li><a href="#">Resume</a></li>
+            <li><a href="#">GitHub</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
