--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,10 @@
       </div>
     </main>
 
+    <section>
+      <p>This is where the projects go</p>
+    </section>
+
     <footer>
       <div class="footer-container">
         <div class="container">
