Added base media queries Fixed some weird padding on footer

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
           <li>
             <img src="dober.jpg" alt="dober" />
             <p>
-              Trump Ipsum is calling for a total and complete shutdown of Muslim text entering your
+              Trump Ipsum is calling for a total and complete shutdown of Lorem text entering your
               website. Despite the constant negative ipsum covfefe.
             </p>
           </li>
@@ -64,10 +64,11 @@
     <footer>
       <div class="footer-container">
         <div class="container">
-          <p>Made with 🌮</p>
+          <p>Made with 🌮 by Taylor Steele</p>
           <ul class="footer-links">
             <li><a href="#">Resume</a></li>
             <li><a href="#">GitHub</a></li>
+            <li><a href="#">LinkdedIn</a></li>
           </ul>
         </div>
       </div>
