--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- <script defer src="./bundle.js"></script> -->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="projects.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
     />
-    <script defer src="bundle.js"></script>
+    <script defer id="script" src="bundle.js"></script>
     <!-- <script defer src="../src/app.js"></script> -->
     <!-- <script defer src="../node_modules/shufflejs/dist/shuffle.js"></script> -->
   </head>
@@ -61,28 +60,15 @@
     </main>
 
     <section>
-      <!-- partial:index.partial.html -->
       <div class="container">
         <div class="row">
           <div class="col-12@sm">
-            <h1>Shuffle homepage demo</h1>
+            <h1>Projects</h1>
           </div>
         </div>
       </div>
 
       <div class="container">
-        <div class="row">
-          <div class="col-4@sm col-3@md">
-            <div class="filters-group">
-              <label for="filters-search-input" class="filter-label">Search</label>
-              <input
-                class="textfield filter__search js-shuffle-search"
-                type="search"
-                id="filters-search-input"
-              />
-            </div>
-          </div>
-        </div>
         <div class="row">
           <div class="col-12@sm filters-group-wrap">
             <div class="filters-group">
@@ -94,20 +80,6 @@
                 <button class="btn btn--primary" data-group="city">City</button>
               </div>
             </div>
-            <fieldset class="filters-group">
-              <legend class="filter-label">Sort</legend>
-              <div class="btn-group sort-options">
-                <label class="btn active">
-                  <input type="radio" name="sort-value" value="dom" checked /> Default
-                </label>
-                <label class="btn">
-                  <input type="radio" name="sort-value" value="title" /> Title
-                </label>
-                <label class="btn">
-                  <input type="radio" name="sort-value" value="date-created" /> Date Created
-                </label>
-              </div>
-            </fieldset>
           </div>
         </div>
       </div>
@@ -458,7 +430,6 @@
           <div class="col-1@sm col-1@xs my-sizer-element"></div>
         </div>
       </div>
-      <!-- partial -->
     </section>
 
     <footer>
