Added cta button

--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,9 @@
       <div class="header-text-container">
         <h1>Taylor Steele</h1>
         <h2>Software Engineer</h2>
+        <a class="cta" href="#projects">See Projects</a>
       </div>
-      <img src="pug.jpg" alt="pug" width="150" />
+      <img src="pug.jpg" alt="pug" />
     </header>
     <main>
       <div class="about-container">
@@ -59,7 +60,7 @@
       </div>
     </main>
 
-    <section>
+    <section id="projects">
       <div class="container">
         <div class="row">
           <div class="col-12@sm">
