--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
   <body class="light">
     <nav class="navbar">
       <ul class="navbar-nav">
-        <li class="nav-item">Home</li>
+        <li class="nav-item"><a href="#">Home</a></li>
         <li class="nav-item"></li>
-        <li class="nav-item">About</li>
-        <li class="nav-item">Projects</li>
+        <li class="nav-item"><a href="#about">About</a></li>
+        <li class="nav-item"><a href="#projects">Projects</a></li>
       </ul>
     </nav>
 
@@ -32,7 +32,7 @@
       </div>
       <img src="pug.jpg" alt="pug" />
     </header>
-    <main>
+    <main id="about">
       <div class="about-container">
         <ul>
           <li>
