About section looks really good I also forgot to checkout a new branch to make these changes. Woops.

--- a/public/index.html
+++ b/public/index.html
@@ -34,29 +34,18 @@
     </header>
     <main id="about">
       <div class="about-container">
-        <ul>
-          <li>
-            <img src="dober.jpg" alt="dober" />
+        <p class="about-watermark">About</p>
+        <div class="about-content">
+          <img src="bowtie.jpg" alt="bowtie" />
+          <div class="about-text-container">
+            <p>I'm a really cool guy turned software developer.</p>
             <p>
-              I will write some great placeholder text – and nobody writes better placeholder text
-              than me, believe me – and I’ll write it very inexpensively.
+              My favorite technologies right now are React.js, React Native, TypeScript, Node.js,
+              MondoDB and Firebase
             </p>
-          </li>
-          <li>
-            <img src="bowtie.jpg" alt="dober" />
-            <p>
-              I think the only difference between me and the other placeholder text is that I’m more
-              honest and my words are more beautiful.
-            </p>
-          </li>
-          <li>
-            <img src="suit.jpg" alt="dober" />
-            <p>
-              Trump Ipsum is calling for a total and complete shutdown of Lorem text entering your
-              website. Despite the constant negative ipsum covfefe.
-            </p>
-          </li>
-        </ul>
+          </div>
+          <img src="bowtie.jpg" alt="bowtie" />
+        </div>
       </div>
     </main>
 
