--- a/public/index.html
+++ b/public/index.html
@@ -1,128 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="projects.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
-      rel="stylesheet"
-    />
-    <script defer id="script" src="bundle.js"></script>
-    <!-- <script defer src="../src/app.js"></script> -->
-    <!-- <script defer src="../node_modules/shufflejs/dist/shuffle.js"></script> -->
-  </head>
-  <body class="light">
-    <nav class="navbar">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a href="#">Home</a></li>
-        <li class="nav-item"></li>
-        <li class="nav-item"><a href="#about">About</a></li>
-        <li class="nav-item"><a href="#projects">Projects</a></li>
-      </ul>
-    </nav>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="projects.css" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+			rel="stylesheet"
+		/>
+		<script defer id="script" src="bundle.js"></script>
+		<!-- <script defer src="../src/app.js"></script> -->
+		<!-- <script defer src="../node_modules/shufflejs/dist/shuffle.js"></script> -->
+	</head>
+	<body class="light">
+		<nav class="navbar">
+			<ul class="navbar-nav">
+				<li class="nav-item"><a href="#">Home</a></li>
+				<li class="nav-item"></li>
+				<li class="nav-item"><a href="#about">About</a></li>
+				<li class="nav-item"><a href="#projects">Projects</a></li>
+			</ul>
+		</nav>
 
-    <header class="header">
-      <div class="header-text-container">
-        <h1>Taylor Steele</h1>
-        <h2>Software Engineer</h2>
-        <a class="cta" href="#projects">See Projects</a>
-      </div>
-      <img src="pug.jpg" alt="pug" />
-    </header>
-    <main id="about">
-      <div class="about-container">
-        <p class="about-watermark">About</p>
-        <div class="about-content">
-          <img src="bowtie.jpg" alt="bowtie" />
-          <div class="about-text-container">
-            <p>I'm a really cool guy turned software developer.</p>
-            <p>
-              My favorite technologies right now are React.js, React Native, TypeScript, Node.js,
-              MondoDB and Firebase
-            </p>
-          </div>
-          <img src="bowtie.jpg" alt="bowtie" />
-        </div>
-      </div>
-    </main>
+		<header class="header">
+			<div class="header-text-container">
+				<h1>Taylor Steele</h1>
+				<h2>Software Engineer</h2>
+				<a class="cta" href="#projects">See Projects</a>
+			</div>
+			<img src="pug.jpg" alt="pug" />
+		</header>
+		<main id="about">
+			<div class="about-container">
+				<p class="about-watermark">About</p>
+				<div class="about-content">
+					<img src="bowtie.jpg" alt="bowtie" />
+					<div class="about-text-container">
+						<p>I'm a really cool guy turned software developer.</p>
+						<p>
+							My favorite technologies right now are React.js, React Native, TypeScript, Node.js,
+							MondoDB and Firebase
+						</p>
+					</div>
+					<img src="bowtie.jpg" alt="bowtie" />
+				</div>
+			</div>
+		</main>
 
-    <section id="projects">
-      <div class="container">
-        <div class="row">
-          <div class="col-12@sm">
-            <h1>Projects</h1>
-          </div>
-        </div>
-      </div>
+		<section id="projects">
+			<div class="container">
+				<div class="row">
+					<div class="col-12@sm">
+						<h1>Projects</h1>
+					</div>
+				</div>
+			</div>
 
-      <div class="container">
-        <div class="row">
-          <div class="col-12@sm filters-group-wrap">
-            <div class="filters-group">
-              <p class="filter-label">Filter</p>
-              <div class="btn-group filter-options">
-                <button class="btn btn--primary" data-group="react">React</button>
-                <button class="btn btn--primary" data-group="react-native">React Native</button>
-                <button class="btn btn--primary" data-group="redux">Redux</button>
-                <button class="btn btn--primary" data-group="typescript">TypeScript</button>
-                <button class="btn btn--primary" data-group="node">Node.js</button>
-                <button class="btn btn--primary" data-group="express">Express.js</button>
-                <button class="btn btn--primary" data-group="mongodb">MongoDB</button>
-                <button class="btn btn--primary" data-group="firebase">FireBase</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+			<div class="container">
+				<div class="row">
+					<div class="col-12@sm filters-group-wrap">
+						<div class="filters-group">
+							<p class="filter-label">Filter</p>
+							<div class="btn-group filter-options">
+								<button class="btn btn--primary" data-group="react">React</button>
+								<button class="btn btn--primary" data-group="react-native">React Native</button>
+								<button class="btn btn--primary" data-group="redux">Redux</button>
+								<button class="btn btn--primary" data-group="typescript">TypeScript</button>
+								<button class="btn btn--primary" data-group="node">Node.js</button>
+								<button class="btn btn--primary" data-group="express">Express.js</button>
+								<button class="btn btn--primary" data-group="mongodb">MongoDB</button>
+								<button class="btn btn--primary" data-group="firebase">FireBase</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 
-      <div class="container">
-        <div id="grid" class="row shuffle-container">
-          <figure
-            class="col-6@xs col-8@sm col-6@md picture-item"
-            data-groups='["react-native", "react", "express", "mongodb", "node", "redux"]'
-          >
-            <div class="color-block"></div>
-          </figure>
-          <figure class="col-6@xs col-4@sm col-3@md picture-item" data-groups='["react", "node"]'>
-            <div class="color-block"></div>
-          </figure>
+			<div class="container">
+				<div id="grid" class="row shuffle-container">
+					<figure
+						class="col-6@xs col-8@sm col-6@md picture-item"
+						data-groups='["react-native", "react", "express", "mongodb", "node", "redux"]'
+					>
+						<div class="outer-figure">
+							Outer text
+							<div class="inner-figure">
+								Inner text
+							</div>
+						</div>
+					</figure>
+					<figure class="col-6@xs col-4@sm col-3@md picture-item" data-groups='["react", "node"]'>
+						<div class="color-block"></div>
+					</figure>
 
-          <figure class="col-6@xs col-4@sm col-3@md picture-item" data-groups='["react"]'>
-            <div class="color-block"></div>
-          </figure>
+					<figure class="col-6@xs col-4@sm col-3@md picture-item" data-groups='["react"]'>
+						<div class="color-block"></div>
+					</figure>
 
-          <figure class="col-6@xs col-4@sm col-3@md picture-item" data-groups='["typescript"]'>
-            <div class="color-block"></div>
-          </figure>
-          <figure
-            class="col-6@xs col-8@sm col-6@md picture-item"
-            data-groups='["react-native", "react", "node", "typescript", "redux", "firebase"]'
-          >
-            <div class="color-block"></div>
-          </figure>
-          <figure class="col-6@xs col-4@sm col-3@md picture-item" data-groups='["firebase"]'>
-            <div class="color-block"></div>
-          </figure>
+					<figure class="col-6@xs col-4@sm col-3@md picture-item" data-groups='["typescript"]'>
+						<div class="color-block"></div>
+					</figure>
+					<figure
+						class="col-6@xs col-8@sm col-6@md picture-item"
+						data-groups='["react-native", "react", "node", "typescript", "redux", "firebase"]'
+					>
+						<div class="color-block"></div>
+					</figure>
+					<figure class="col-6@xs col-4@sm col-3@md picture-item" data-groups='["firebase"]'>
+						<div class="color-block"></div>
+					</figure>
 
-          <div class="col-1@sm col-1@xs my-sizer-element"></div>
-        </div>
-      </div>
-    </section>
+					<div class="col-1@sm col-1@xs my-sizer-element"></div>
+				</div>
+			</div>
+		</section>
 
-    <footer>
-      <div class="footer-container">
-        <div class="footer-sub-container">
-          <p>Made with 🌮 by Taylor Steele</p>
-          <ul class="footer-links">
-            <li><a href="#">Resume</a></li>
-            <li><a href="#">GitHub</a></li>
-            <li><a href="#">LinkdedIn</a></li>
-          </ul>
-        </div>
-      </div>
-    </footer>
-  </body>
+		<footer>
+			<div class="footer-container">
+				<div class="footer-sub-container">
+					<p>Made with 🌮 by Taylor Steele</p>
+					<ul class="footer-links">
+						<li><a href="#">Resume</a></li>
+						<li><a href="#">GitHub</a></li>
+						<li><a href="#">LinkdedIn</a></li>
+					</ul>
+				</div>
+			</div>
+		</footer>
+	</body>
 </html>
