Testing details button location

--- a/public/index.html
+++ b/public/index.html
@@ -85,8 +85,15 @@
 						data-groups='["react-native", "react", "express", "mongodb", "node", "redux"]'
 					>
 						<div class="outer-figure">
-							Outer text
+							<div class="outer-figure-title">
+								<h1>App Name</h1>
+							</div>
+							<div class="outer-figure-content">
+								<h4>Short app description, max 10 words</h4>
+								<p>React, Redux, Node.js</p>
+							</div>
 							<div class="inner-figure">
+								<span>Details</span>
 								Inner text
 							</div>
 						</div>
