Finalized "More" location Applied to all project figures, gotta work on the smaller ones

--- a/public/index.html
+++ b/public/index.html
@@ -90,33 +90,87 @@
 							</div>
 							<div class="outer-figure-content">
 								<h4>Short app description, max 10 words</h4>
-								<p>React, Redux, Node.js</p>
+								<p>React, Redux, Node.js<span>More</span></p>
 							</div>
 							<div class="inner-figure">
-								<span>Details</span>
 								Inner text
 							</div>
 						</div>
 					</figure>
 					<figure class="col-6@xs col-4@sm col-3@md picture-item" data-groups='["react", "node"]'>
-						<div class="color-block"></div>
+						<div class="outer-figure">
+							<div class="outer-figure-title">
+								<h1>App Name</h1>
+							</div>
+							<div class="outer-figure-content">
+								<h4>Short app description, max 10 words</h4>
+								<p>React, Redux, Node.js<span>More</span></p>
+							</div>
+							<div class="inner-figure">
+								Inner text
+							</div>
+						</div>
 					</figure>
 
 					<figure class="col-6@xs col-4@sm col-3@md picture-item" data-groups='["react"]'>
-						<div class="color-block"></div>
+						<div class="outer-figure">
+							<div class="outer-figure-title">
+								<h1>App Name</h1>
+							</div>
+							<div class="outer-figure-content">
+								<h4>Short app description, max 10 words</h4>
+								<p>React, Redux, Node.js<span>More</span></p>
+							</div>
+							<div class="inner-figure">
+								Inner text
+							</div>
+						</div>
 					</figure>
 
 					<figure class="col-6@xs col-4@sm col-3@md picture-item" data-groups='["typescript"]'>
-						<div class="color-block"></div>
+						<div class="outer-figure">
+							<div class="outer-figure-title">
+								<h1>App Name</h1>
+							</div>
+							<div class="outer-figure-content">
+								<h4>Short app description, max 10 words</h4>
+								<p>React, Redux, Node.js<span>More</span></p>
+							</div>
+							<div class="inner-figure">
+								Inner text
+							</div>
+						</div>
 					</figure>
 					<figure
 						class="col-6@xs col-8@sm col-6@md picture-item"
 						data-groups='["react-native", "react", "node", "typescript", "redux", "firebase"]'
 					>
-						<div class="color-block"></div>
+						<div class="outer-figure">
+							<div class="outer-figure-title">
+								<h1>App Name</h1>
+							</div>
+							<div class="outer-figure-content">
+								<h4>Short app description, max 10 words</h4>
+								<p>React, Redux, Node.js<span>More</span></p>
+							</div>
+							<div class="inner-figure">
+								Inner text
+							</div>
+						</div>
 					</figure>
 					<figure class="col-6@xs col-4@sm col-3@md picture-item" data-groups='["firebase"]'>
-						<div class="color-block"></div>
+						<div class="outer-figure">
+							<div class="outer-figure-title">
+								<h1>App Name</h1>
+							</div>
+							<div class="outer-figure-content">
+								<h4>Short app description, max 10 words</h4>
+								<p>React, Redux, Node.js<span>More</span></p>
+							</div>
+							<div class="inner-figure">
+								Inner text
+							</div>
+						</div>
 					</figure>
 
 					<div class="col-1@sm col-1@xs my-sizer-element"></div>
