Inner Text looks fine

--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,28 @@
 								<p>React, Redux, Node.js<span>More</span></p>
 							</div>
 							<div class="inner-figure">
-								Inner text
+								<img src="suit.jpg" alt="" srcset="" />
+								<div class="inner-text">
+									<h3>Description</h3>
+									<p>Here's some dumb stuff</p>
+									<h3>Technology</h3>
+									<p>Here's some more dumb stuff</p>
+									<br />
+									<p>
+										<a
+											href="https://github.com/taylorfsteele/new-portfolio"
+											target="_blank"
+											rel="noopener noreferrer"
+											>GitHub</a
+										>
+										<a
+											href="https://www.linkedin.com/in/taylorfsteele/"
+											target="_blank"
+											rel="noopener noreferrer"
+											>LinkedIn</a
+										>
+									</p>
+								</div>
 							</div>
 						</div>
 					</figure>
@@ -103,11 +124,31 @@
 								<h1>App Name</h1>
 							</div>
 							<div class="outer-figure-content">
-								<h4>Short app description, max 10 words</h4>
+								<h4>Don't exceed this line</h4>
 								<p>React, Redux, Node.js<span>More</span></p>
 							</div>
-							<div class="inner-figure">
-								Inner text
+							<div class="inner-figure inner-figure-small">
+								<div class="inner-text">
+									<h3>Description</h3>
+									<p>Here's some dumb stuff</p>
+									<h3>Technology</h3>
+									<p>Here's some more dumb stuff</p>
+									<br />
+									<p>
+										<a
+											href="https://github.com/taylorfsteele/new-portfolio"
+											target="_blank"
+											rel="noopener noreferrer"
+											>GitHub</a
+										>
+										<a
+											href="https://www.linkedin.com/in/taylorfsteele/"
+											target="_blank"
+											rel="noopener noreferrer"
+											>LinkedIn</a
+										>
+									</p>
+								</div>
 							</div>
 						</div>
 					</figure>
@@ -118,11 +159,31 @@
 								<h1>App Name</h1>
 							</div>
 							<div class="outer-figure-content">
-								<h4>Short app description, max 10 words</h4>
+								<h4>Short app description</h4>
 								<p>React, Redux, Node.js<span>More</span></p>
 							</div>
-							<div class="inner-figure">
-								Inner text
+							<div class="inner-figure inner-figure-small">
+								<div class="inner-text">
+									<h3>Description</h3>
+									<p>Here's some dumb stuff</p>
+									<h3>Technology</h3>
+									<p>Here's some more dumb stuff</p>
+									<br />
+									<p>
+										<a
+											href="https://github.com/taylorfsteele/new-portfolio"
+											target="_blank"
+											rel="noopener noreferrer"
+											>GitHub</a
+										>
+										<a
+											href="https://www.linkedin.com/in/taylorfsteele/"
+											target="_blank"
+											rel="noopener noreferrer"
+											>LinkedIn</a
+										>
+									</p>
+								</div>
 							</div>
 						</div>
 					</figure>
@@ -133,11 +194,31 @@
 								<h1>App Name</h1>
 							</div>
 							<div class="outer-figure-content">
-								<h4>Short app description, max 10 words</h4>
+								<h4>Short app description</h4>
 								<p>React, Redux, Node.js<span>More</span></p>
 							</div>
-							<div class="inner-figure">
-								Inner text
+							<div class="inner-figure inner-figure-small">
+								<div class="inner-text">
+									<h3>Description</h3>
+									<p>Here's some dumb stuff</p>
+									<h3>Technology</h3>
+									<p>Here's some more dumb stuff</p>
+									<br />
+									<p>
+										<a
+											href="https://github.com/taylorfsteele/new-portfolio"
+											target="_blank"
+											rel="noopener noreferrer"
+											>GitHub</a
+										>
+										<a
+											href="https://www.linkedin.com/in/taylorfsteele/"
+											target="_blank"
+											rel="noopener noreferrer"
+											>LinkedIn</a
+										>
+									</p>
+								</div>
 							</div>
 						</div>
 					</figure>
@@ -154,7 +235,28 @@
 								<p>React, Redux, Node.js<span>More</span></p>
 							</div>
 							<div class="inner-figure">
-								Inner text
+								<img src="suit.jpg" alt="" srcset="" />
+								<div class="inner-text">
+									<h3>Description</h3>
+									<p>Here's some dumb stuff</p>
+									<h3>Technology</h3>
+									<p>Here's some more dumb stuff</p>
+									<br />
+									<p>
+										<a
+											href="https://github.com/taylorfsteele/new-portfolio"
+											target="_blank"
+											rel="noopener noreferrer"
+											>GitHub</a
+										>
+										<a
+											href="https://www.linkedin.com/in/taylorfsteele/"
+											target="_blank"
+											rel="noopener noreferrer"
+											>LinkedIn</a
+										>
+									</p>
+								</div>
 							</div>
 						</div>
 					</figure>
@@ -164,11 +266,31 @@
 								<h1>App Name</h1>
 							</div>
 							<div class="outer-figure-content">
-								<h4>Short app description, max 10 words</h4>
+								<h4>Short app description</h4>
 								<p>React, Redux, Node.js<span>More</span></p>
 							</div>
-							<div class="inner-figure">
-								Inner text
+							<div class="inner-figure inner-figure-small">
+								<div class="inner-text">
+									<h3>Description</h3>
+									<p>Here's some dumb stuff</p>
+									<h3>Technology</h3>
+									<p>Here's some more dumb stuff</p>
+									<br />
+									<p>
+										<a
+											href="https://github.com/taylorfsteele/new-portfolio"
+											target="_blank"
+											rel="noopener noreferrer"
+											>GitHub</a
+										>
+										<a
+											href="https://www.linkedin.com/in/taylorfsteele/"
+											target="_blank"
+											rel="noopener noreferrer"
+											>LinkedIn</a
+										>
+									</p>
+								</div>
 							</div>
 						</div>
 					</figure>
