--- a/public/index.html
+++ b/public/index.html
@@ -107,6 +107,7 @@
 											rel="noopener noreferrer"
 											>GitHub</a
 										>
+										&nbsp;&nbsp;&nbsp;
 										<a
 											href="https://www.linkedin.com/in/taylorfsteele/"
 											target="_blank"
@@ -141,6 +142,7 @@
 											rel="noopener noreferrer"
 											>GitHub</a
 										>
+										&nbsp;&nbsp;&nbsp;
 										<a
 											href="https://www.linkedin.com/in/taylorfsteele/"
 											target="_blank"
@@ -176,6 +178,7 @@
 											rel="noopener noreferrer"
 											>GitHub</a
 										>
+										&nbsp;&nbsp;&nbsp;
 										<a
 											href="https://www.linkedin.com/in/taylorfsteele/"
 											target="_blank"
@@ -211,6 +214,7 @@
 											rel="noopener noreferrer"
 											>GitHub</a
 										>
+										&nbsp;&nbsp;&nbsp;
 										<a
 											href="https://www.linkedin.com/in/taylorfsteele/"
 											target="_blank"
@@ -249,6 +253,7 @@
 											rel="noopener noreferrer"
 											>GitHub</a
 										>
+										&nbsp;&nbsp;&nbsp;
 										<a
 											href="https://www.linkedin.com/in/taylorfsteele/"
 											target="_blank"
@@ -283,6 +288,7 @@
 											rel="noopener noreferrer"
 											>GitHub</a
 										>
+										&nbsp;&nbsp;&nbsp;
 										<a
 											href="https://www.linkedin.com/in/taylorfsteele/"
 											target="_blank"
@@ -305,9 +311,23 @@
 				<div class="footer-sub-container">
 					<p>Made with 🌮 by Taylor Steele</p>
 					<ul class="footer-links">
-						<li><a href="#">Resume</a></li>
-						<li><a href="#">GitHub</a></li>
-						<li><a href="#">LinkdedIn</a></li>
+						<li><a href="#" target="_blank" rel="noopener noreferrer">Resume</a></li>
+						<li>
+							<a
+								href="https://github.com/taylorfsteele/new-portfolio"
+								target="_blank"
+								rel="noopener noreferrer"
+								>GitHub</a
+							>
+						</li>
+						<li>
+							<a
+								href="https://www.linkedin.com/in/taylorfsteele/"
+								target="_blank"
+								rel="noopener noreferrer"
+								>LinkdedIn</a
+							>
+						</li>
 					</ul>
 				</div>
 			</div>
