--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
 					</div>
 				</div>
 			</div>
-
+			<hr style="width: 88%; opacity: 0.5;" />
 			<div class="container">
 				<div class="row">
 					<div class="col-12@sm filters-group-wrap">
