--- a/public/index.html
+++ b/public/index.html
@@ -309,7 +309,7 @@
 		<footer>
 			<div class="footer-container">
 				<div class="footer-sub-container">
-					<p>Made with 🌮 by Taylor Steele</p>
+					<p>Made with <emoji id="emoji">🌮</emoji> by Taylor Steele</p>
 					<ul class="footer-links">
 						<li><a href="#" target="_blank" rel="noopener noreferrer">Resume</a></li>
 						<li>
