Added project pictures, descriptions Updated all readme's for projects

--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,9 @@
 								<button class="btn btn--primary" data-group="express">Express.js</button>
 								<button class="btn btn--primary" data-group="mongodb">MongoDB</button>
 								<button class="btn btn--primary" data-group="firebase">FireBase</button>
-								<button class="btn btn--primary" data-group="Webpack">Webpack</button>
+								<button class="btn btn--primary" data-group="webpack">Webpack</button>
+								<button class="btn btn--primary" data-group="GCP">GCP</button>
+								<button class="btn btn--primary" data-group="c++">C++</button>
 							</div>
 						</div>
 					</div>
@@ -83,7 +85,7 @@
 				<div id="grid" class="row shuffle-container">
 					<figure
 						class="col-6@xs col-8@sm col-6@md picture-item"
-						data-groups='["react-native", "react", "node", "redux", "express", "mongodb", "webpack"]'
+						data-groups='["react-native", "react", "node", "redux", "express", "mongodb"]'
 					>
 						<div class="outer-figure walk">
 							<div class="outer-figure-title">
@@ -91,7 +93,7 @@
 							</div>
 							<div class="outer-figure-content">
 								<h4>Record, save, & see a map of your walks or hikes</h4>
-								<p>React Native, Node.js, Redux, Express.js, MongoDB, <span>More</span></p>
+								<p>React Native, Node.js, Redux, Express.js, MongoDB<span>More</span></p>
 							</div>
 							<div class="inner-figure">
 								<img src="WalkApp.png" alt="" srcset="" />
@@ -150,7 +152,7 @@
 											href="https://github.com/taylorfsteele/Entry-Job-Board"
 											target="_blank"
 											rel="noopener noreferrer"
-											>Source Code & Demo Instructions</a
+											>Source Code & Demo</a
 										>
 									</p>
 								</div>
@@ -158,35 +160,33 @@
 						</div>
 					</figure>
 
-					<figure class="col-6@xs col-4@sm col-3@md picture-item" data-groups='["react"]'>
-						<div class="outer-figure">
+					<figure
+						class="col-6@xs col-4@sm col-3@md picture-item"
+						data-groups='["react", "node", "express", "GCP", "firebase"]'
+					>
+						<div class="outer-figure walk-score">
 							<div class="outer-figure-title">
 								<h1>Walk Score</h1>
 							</div>
 							<div class="outer-figure-content">
-								<h4>Short app description</h4>
-								<p>React, Redux, Node.js<span>More</span></p>
+								<h4>Find Walk Score for your address</h4>
+								<p>React, Node.js, GCP<span>More</span></p>
 							</div>
 							<div class="inner-figure inner-figure-small">
 								<div class="inner-text">
 									<h3>Description</h3>
-									<p>Here's some dumb stuff</p>
+									<p>
+										Find and Compare Public Transit & Walkability Scores, enter your address to get
+										your score.
+									</p>
 									<h3>Technology</h3>
-									<p>Here's some more dumb stuff</p>
-									<br />
+									<p>React, Node.js, Express.js, Google Cloud Platform, Firebase</p>
 									<p>
 										<a
-											href="https://github.com/taylorfsteele/new-portfolio"
+											href="https://github.com/taylorfsteele/WalkScoreProject"
 											target="_blank"
 											rel="noopener noreferrer"
-											>GitHub</a
-										>
-										&nbsp;&nbsp;&nbsp;
-										<a
-											href="https://www.linkedin.com/in/taylorfsteele/"
-											target="_blank"
-											rel="noopener noreferrer"
-											>LinkedIn</a
+											>Source Code & Demo</a
 										>
 									</p>
 								</div>
@@ -194,35 +194,30 @@
 						</div>
 					</figure>
 
-					<figure class="col-6@xs col-4@sm col-3@md picture-item" data-groups='["typescript"]'>
-						<div class="outer-figure">
+					<figure class="col-6@xs col-4@sm col-3@md picture-item" data-groups='["c++"]'>
+						<div class="outer-figure controller">
 							<div class="outer-figure-title">
 								<h1>Universal Controller</h1>
 							</div>
 							<div class="outer-figure-content">
-								<h4>Short app description</h4>
-								<p>React, Redux, Node.js<span>More</span></p>
+								<h4>Play games with any controller</h4>
+								<p>C++, Arduino<span>More</span></p>
 							</div>
 							<div class="inner-figure inner-figure-small">
 								<div class="inner-text">
 									<h3>Description</h3>
-									<p>Here's some dumb stuff</p>
+									<p>
+										Install an Arduino board on any controller you like, and convert the input
+										signals to any other controller signals.
+									</p>
 									<h3>Technology</h3>
-									<p>Here's some more dumb stuff</p>
-									<br />
+									<p>C++</p>
 									<p>
 										<a
-											href="https://github.com/taylorfsteele/new-portfolio"
+											href="https://github.com/taylorfsteele/UniversalController"
 											target="_blank"
 											rel="noopener noreferrer"
-											>GitHub</a
-										>
-										&nbsp;&nbsp;&nbsp;
-										<a
-											href="https://www.linkedin.com/in/taylorfsteele/"
-											target="_blank"
-											rel="noopener noreferrer"
-											>LinkedIn</a
+											>Source Code</a
 										>
 									</p>
 								</div>
@@ -231,72 +226,69 @@
 					</figure>
 					<figure
 						class="col-6@xs col-8@sm col-6@md picture-item"
-						data-groups='["react-native", "react", "node", "typescript", "redux", "firebase"]'
+						data-groups='["react-native", "react", "redux", "typescript", "node", "GCP", "FireBase"]'
 					>
-						<div class="outer-figure">
+						<div class="outer-figure twitter">
 							<div class="outer-figure-title">
-								<h1>Shameless Twitter Clone</h1>
+								<h1>My Shameless Mobile Twitter Clone</h1>
 							</div>
 							<div class="outer-figure-content">
-								<h4>Short app description, max 10 words</h4>
-								<p>React, Redux, Node.js<span>More</span></p>
+								<h4>A clone of Twitter's Mobile app, remade in React Native</h4>
+								<p>React Native, Redux, TypeScript, Node.js, GCP, FireBase<span>More</span></p>
 							</div>
 							<div class="inner-figure">
-								<img src="suit.jpg" alt="" srcset="" />
+								<img src="twitterScreenshot.png" alt="" srcset="" />
 								<div class="inner-text">
 									<h3>Description</h3>
-									<p>Here's some dumb stuff</p>
+									<p>
+										What portfolio is complete without a social media clone? This is built on React
+										Native, runs on either Android or iOS.
+									</p>
 									<h3>Technology</h3>
-									<p>Here's some more dumb stuff</p>
-									<br />
+									<p>React Native, Redux, TypeScript, Node.js, GCP, FireBase</p>
 									<p>
 										<a
-											href="https://github.com/taylorfsteele/new-portfolio"
+											href="https://github.com/taylorfsteele/TwitterClone"
 											target="_blank"
 											rel="noopener noreferrer"
-											>GitHub</a
+											>Source Code</a
 										>
 										&nbsp;&nbsp;&nbsp;
 										<a
-											href="https://www.linkedin.com/in/taylorfsteele/"
+											href="https://expo.io/@taylorfsteele/TwitterClone"
 											target="_blank"
 											rel="noopener noreferrer"
-											>LinkedIn</a
+											>Live Demo</a
 										>
 									</p>
 								</div>
 							</div>
 						</div>
 					</figure>
-					<figure class="col-6@xs col-4@sm col-3@md picture-item" data-groups='["firebase"]'>
-						<div class="outer-figure">
+					<figure class="col-6@xs col-4@sm col-3@md picture-item" data-groups='["webpack", "node"]'>
+						<div class="outer-figure portfolio">
 							<div class="outer-figure-title">
 								<h1>CI/CD Portfolio</h1>
 							</div>
 							<div class="outer-figure-content">
-								<h4>Short app description</h4>
-								<p>React, Redux, Node.js<span>More</span></p>
+								<h4>This portfolio, but with Dev Ops</h4>
+								<p>Webpack, Node.js<span>More</span></p>
 							</div>
 							<div class="inner-figure inner-figure-small">
 								<div class="inner-text">
 									<h3>Description</h3>
-									<p>Here's some dumb stuff</p>
+									<p>
+										Portfolios aren't usually technical, but this one is! Fully integrated testing &
+										CI/CD using GitHub.
+									</p>
 									<h3>Technology</h3>
-									<p>Here's some more dumb stuff</p>
-									<br />
+									<p>Webpack, Node.js, Jest, Git, GitHub Actions</p>
 									<p>
 										<a
 											href="https://github.com/taylorfsteele/new-portfolio"
 											target="_blank"
 											rel="noopener noreferrer"
-											>GitHub</a
-										>
-										&nbsp;&nbsp;&nbsp;
-										<a
-											href="https://www.linkedin.com/in/taylorfsteele/"
-											target="_blank"
-											rel="noopener noreferrer"
-											>LinkedIn</a
+											>Source Code</a
 										>
 									</p>
 								</div>
