Cleaned up some project mobile views

--- a/public/index.html
+++ b/public/index.html
@@ -92,8 +92,14 @@
 								<h1>Walk Tracker</h1>
 							</div>
 							<div class="outer-figure-content">
-								<h4>Record, save, & see a map of your walks or hikes</h4>
-								<p>React Native, Node.js, Redux, Express.js, MongoDB<span>More</span></p>
+								<div class="long">
+									<h4>Record, save, & see a map of your walks or hikes</h4>
+									<p>React Native, Node.js, Redux, Express.js, MongoDB<span>More</span></p>
+								</div>
+								<div class="short">
+									<h4>Record a map of your walks or hikes</h4>
+									<p>React Native, Node.js...<span>More</span></p>
+								</div>
 							</div>
 							<div class="inner-figure">
 								<img src="WalkApp.png" alt="" srcset="" />
@@ -226,15 +232,21 @@
 					</figure>
 					<figure
 						class="col-6@xs col-8@sm col-6@md picture-item"
-						data-groups='["react-native", "react", "redux", "typescript", "node", "GCP", "FireBase"]'
+						data-groups='["react-native", "react", "redux", "typescript", "node", "GCP", "firebase"]'
 					>
 						<div class="outer-figure twitter">
 							<div class="outer-figure-title">
 								<h1>My Shameless Mobile Twitter Clone</h1>
 							</div>
 							<div class="outer-figure-content">
-								<h4>A clone of Twitter's Mobile app, remade in React Native</h4>
-								<p>React Native, Redux, TypeScript, Node.js, GCP, FireBase<span>More</span></p>
+								<div class="long">
+									<h4>A clone of Twitter's Mobile app, remade in React Native</h4>
+									<p>React Native, Redux, TypeScript, Node.js, GCP, FireBase<span>More</span></p>
+								</div>
+								<div class="short">
+									<h4>A clone of Twitter's Mobile app</h4>
+									<p>React Native, Redux...<span>More</span></p>
+								</div>
 							</div>
 							<div class="inner-figure">
 								<img src="twitterScreenshot.png" alt="" srcset="" />
