--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Taylor Steele Developer Portfolio</title>
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="projects.css" />
 		<link
@@ -38,10 +38,21 @@
 				<div class="about-content">
 					<img src="portrait.jpg" alt="portrait" />
 					<div class="about-text-container">
-						<p>I'm a really cool guy turned software developer.</p>
 						<p>
-							My favorite technologies right now are React.js, React Native, TypeScript, Node.js,
-							MondoDB and Firebase
+							Hi, my name is Taylor Steele. I'm a hotel manager turned software developer. I design
+							and build applications for web and mobile devices through clean code and user-centric
+							design.
+						</p>
+						<p>
+							As a tenacious self-taught programmer, I approach every project as an opportunity to
+							challenge my own knowledge and limitations in the pursuit of mastery. I bias towards
+							continuious improvement, and am constantly learning the latest tools and new systems.
+						</p>
+						<p>
+							I'm currently seeking a new developer opportunity that will allow me to leverage my
+							person-centric and team-oriented background and to create compelling customer
+							experiences. So if you're looking for a highly motivated, independent, and
+							hard-working developer to join your team, let's get in touch!
 						</p>
 					</div>
 					<img src="portrait.jpg" alt="portrait" />
@@ -318,12 +329,13 @@
 				<div class="footer-sub-container">
 					<p>Made with <emoji id="emoji">🌮</emoji> by Taylor Steele</p>
 					<ul class="footer-links">
-						<li><a href="#" target="_blank" rel="noopener noreferrer">Resume</a></li>
 						<li>
-							<a
-								href="https://github.com/taylorfsteele/new-portfolio"
-								target="_blank"
-								rel="noopener noreferrer"
+							<a href="./Taylor Steele Resume.pdf" target="_blank" rel="noopener noreferrer"
+								>Resume</a
+							>
+						</li>
+						<li>
+							<a href="https://github.com/taylorfsteele" target="_blank" rel="noopener noreferrer"
 								>GitHub</a
 							>
 						</li>
