Mobile image retouches

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 						<p>
 							As a tenacious self-taught programmer, I approach every project as an opportunity to
 							challenge my own knowledge and limitations in the pursuit of mastery. I bias towards
-							continuious improvement, and am constantly learning the latest tools and new systems.
+							continuious improvement, and am constantly learning the latest tools and systems.
 						</p>
 						<p>
 							I'm currently seeking a new developer opportunity that will allow me to leverage my
@@ -55,7 +55,6 @@
 							hard-working developer to join your team, let's get in touch!
 						</p>
 					</div>
-					<img src="portrait.jpg" alt="portrait" />
 				</div>
 			</div>
 		</main>
@@ -344,7 +343,7 @@
 								href="https://www.linkedin.com/in/taylorfsteele/"
 								target="_blank"
 								rel="noopener noreferrer"
-								>LinkdedIn</a
+								>LinkedIn</a
 							>
 						</li>
 					</ul>
